--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <div class="app">
     <h1>This is a header in initial commit</h1>
+    <a href="page1.html">page1</a>
   </div>
 </body>
 </html>
