--- a/index.html
+++ b/index.html
@@ -1,14 +1,61 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>This is the title</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
   <div class="app">
     <h1>This is a header in initial commit</h1>
     <a href="page1.html">page1</a>
     <a href="page2.html">page2</a>
+    <br><br>
+
+    <form class="searchBar" action="">
+      <input type="text" placeholder="Cari sesuatu" name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+
   </div>
 </body>
+
+<style>
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .searchBar input[type=text] {
+    padding: 10px;
+    font-size: 17px;
+    border: 1px solid black;
+    float: left;
+    width: 50%;
+    background: #f1f1f1;
+  }
+
+  .searchBar button {
+    float: left;
+    width: 10%;
+    padding: 10px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid black;
+    border-left: none;
+    cursor: pointer;
+  }
+
+  .searchBar button:hover {
+    background: #77dd77;
+  }
+</style>
+
+
 </html>
